Feat: Implement Advanced Enhancements (Docker, Virtual Threads, Metrics, Interactive CLI)